- added timer to start game function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="scoreBoard">
         <a href="/scores.html" class="btn">Score Board</a>
       </div>
-      <div id="timer"></div>
+      <div id="timer" class="hide"></div>
     </header>
     <main>
       <div class="container">
