- added if statement to increase score and decrease time

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div id="scoreBoard">
-        <a href="/scores.html" class="btn">Score Board</a>
+        <a href="/scores.htmk" class="btn">ScoreBoard</a>
       </div>
       <div id="timer" class="hide"></div>
     </header>
