--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!--  Page Container -->
@@ -61,5 +61,5 @@
       </main>
     </div>
   </body>
-  <script src="/assets/javascript/game.js"></script>
+  <script src="./assets/javascript/game.js"></script>
 </html>
